SERVER-54256: Handle retryable errors when choosing a donor sync source